# rockchip-va-driver

./: .gitignore  CMakeLists.txt  OWNERS
debian/: changelog  rules
librkvpu/: CMakeLists.txt  v4l2_calls.c
librkvpu/inc/: v4l2_calls.h
librkvpu/inc/linux/: v4l2-controls.h
librkvpu/rk_vdpu/: CMakeLists.txt  h264d.c
librkvpu/rk_vdpu/include/: h264d.h
librkvpu/rk_vepu/: CMakeLists.txt  rk_venc.h  rk_venc_rate_control.h  rk_vepu.c  rk_vepu_debug.h  rk_vepu_interface.h
librkvpu/rk_vepu/h264e/: h264e.c  h264e.h  h264e_common.h  h264e_mad.c  h264e_mad.h  h264e_rate_control.c  h264e_rate_control.h
librkvpu/rk_vepu/vp8_enc/: encasiccontroller.h  enccommon.h  encswhwregisters.h  rk_vp8encapi.c  rk_vp8encapi.h  vp8codeframe.h  vp8encapi.c  vp8entropy.c  vp8entropy.h  vp8entropytools.h  vp8init.h  vp8instance.h  vp8picparameterset.c  vp8picparameterset.h  vp8picturebuffer.c  vp8picturebuffer.h  vp8quanttable.h  vp8ratecontrol.c  vp8ratecontrol.h  vpu_mem.c  vpu_mem.h
libv4l-rockchip/: Makefile.am  libv4l-encplugin-rockchip.c
libv4l-rockchip/libvpu/: rk_vepu.c  rk_vepu_debug.c  rk_vepu_interface.h
libv4l-rockchip/libvpu/vp8_enc/: encasiccontroller.c  encasiccontroller.h  encasiccontroller_v2.c  enccfg.h  enccommon.h  rk_vp8encapi.c  rk_vp8encapi.h  vp8codeframe.c  vp8encapi.c  vp8encapi.h  vp8entropytable.h  vp8header.c  vp8header.h  vp8init.c  vp8macroblocktools.c  vp8macroblocktools.h  vp8picparameterset.c  vp8putbits.c  vp8putbits.h  vp8ratecontrol.c  vp8seqparameterset.h  vpu_mem.c
src/: rockchip_buffer.c  rockchip_drv_video.c  rockchip_encoder.c  rockchip_image.c  rockchip_picture.c  v4l2_enc_utils.c  v4l2_utils.c
src/include/: rockchip_buffer.h  rockchip_drv_video.h  v4l2_utils.h
