cmake_minimum_required(VERSION 2.6)
INCLUDE(GNUInstallDirs)

ADD_SUBDIRECTORY (rk_vepu)
ADD_SUBDIRECTORY (rk_vdpu)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")

ADD_DEFINITIONS(-Os -Wall --std=gnu99 -g3 -Wmissing-declarations)

ADD_LIBRARY (rkvpu SHARED v4l2_calls.c)

TARGET_INCLUDE_DIRECTORIES (rkvpu PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/inc"
"${CMAKE_CURRENT_SOURCE_DIR}/rk_vepu"
"${CMAKE_CURRENT_SOURCE_DIR}/rk_vdpu"
)

TARGET_LINK_LIBRARIES(rkvpu rkvepu rkvdpu pthread)

INSTALL(TARGETS rkvpu LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}")
